# OpenNeck

./: .gitignore  README.md  README_CN.md  pyproject.toml  requirements.txt  simple_active_vision.py
openneck/: __init__.py  _angles.py  _config.py  _driver.py  api.py  cli.py
openneck/tools/: __init__.py  _servo_bus.py  calibrate_servo_middle.py  change_servo_id.py  probe_bus.py  scan_servos.py
tests/: __init__.py  test_angles.py  test_api.py  test_cli.py  test_config.py  test_driver.py
tools/: _servo_bus.py  calibrate_servo_middle.py  change_servo_id.py  scan_servos.py
