[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openneck"
version = "0.2.0"
description = "Angle-based two-axis OpenNeck servo driver and maintenance tools."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyserial>=3.5",
    "ftservo-python-sdk==2.0.0",
]

[project.scripts]
openneck = "openneck.cli:main"
openneck-scan-servos = "openneck.tools.scan_servos:main"
openneck-change-servo-id = "openneck.tools.change_servo_id:main"
openneck-calibrate-middle = "openneck.tools.calibrate_servo_middle:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["openneck*"]
